// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`shims plugin should add __dirname and __filename shims for ESM format 1`] = `
"// packages/bunup/test/.project/src/index.ts
import { fileURLToPath } from "url";
import { dirname } from "path";
var __filename2 = fileURLToPath(import.meta.url);
var __dirname2 = dirname(__filename2);
console.log("dirname:", __dirname2);
console.log("filename:", __filename2);
function getFilePath() {
  return __filename2;
}
function getDirPath() {
  return __dirname2;
}
export {
  getFilePath,
  getDirPath
};
"
`;

exports[`shims plugin should add import.meta.url shim for CJS format 1`] = `
"var import_node_module = require("node:module");
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __moduleCache = /* @__PURE__ */ new WeakMap;
var __toCommonJS = (from) => {
  var entry = __moduleCache.get(from), desc;
  if (entry)
    return entry;
  entry = __defProp({}, "__esModule", { value: true });
  if (from && typeof from === "object" || typeof from === "function")
    __getOwnPropNames(from).map((key) => !__hasOwnProp.call(entry, key) && __defProp(entry, key, {
      get: () => from[key],
      enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
    }));
  __moduleCache.set(from, entry);
  return entry;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, {
      get: all[name],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name] = () => newValue
    });
};

// packages/bunup/test/.project/src/index.ts
var exports_src = {};
__export(exports_src, {
  getMetaUrl: () => getMetaUrl
});
module.exports = __toCommonJS(exports_src);
var import_url = require("url");
var __filename = "/Users/admin/Desktop/Bunup/bunup/packages/bunup/test/.project/src/index.ts";
var importMetaUrl2 = import_url.pathToFileURL(__filename).href;
console.log("import.meta.url:", importMetaUrl2);
function getMetaUrl() {
  return importMetaUrl2;
}
"
`;

exports[`shims plugin should not add shims when variables are not used 1`] = `
"// packages/bunup/test/.project/src/index.ts
function hello() {
  return "hello world";
}
export {
  hello
};
"
`;

exports[`shims plugin should not add shims when variables are not used 2`] = `
"var import_node_module = require("node:module");
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __moduleCache = /* @__PURE__ */ new WeakMap;
var __toCommonJS = (from) => {
  var entry = __moduleCache.get(from), desc;
  if (entry)
    return entry;
  entry = __defProp({}, "__esModule", { value: true });
  if (from && typeof from === "object" || typeof from === "function")
    __getOwnPropNames(from).map((key) => !__hasOwnProp.call(entry, key) && __defProp(entry, key, {
      get: () => from[key],
      enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
    }));
  __moduleCache.set(from, entry);
  return entry;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, {
      get: all[name],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name] = () => newValue
    });
};

// packages/bunup/test/.project/src/index.ts
var exports_src = {};
__export(exports_src, {
  hello: () => hello
});
module.exports = __toCommonJS(exports_src);
function hello() {
  return "hello world";
}
"
`;

exports[`shims plugin should only add needed shims when multiple variables are used 1`] = `
"// packages/bunup/test/.project/src/esm-file.ts
import { fileURLToPath } from "url";
import { dirname } from "path";
var __filename2 = fileURLToPath(import.meta.url);
var __dirname2 = dirname(__filename2);
console.log("dirname:", __dirname2);
function getDirPath() {
  return __dirname2;
}
export {
  getDirPath
};
"
`;

exports[`shims plugin should only add needed shims when multiple variables are used 2`] = `
"var import_node_module = require("node:module");
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __moduleCache = /* @__PURE__ */ new WeakMap;
var __toCommonJS = (from) => {
  var entry = __moduleCache.get(from), desc;
  if (entry)
    return entry;
  entry = __defProp({}, "__esModule", { value: true });
  if (from && typeof from === "object" || typeof from === "function")
    __getOwnPropNames(from).map((key) => !__hasOwnProp.call(entry, key) && __defProp(entry, key, {
      get: () => from[key],
      enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
    }));
  __moduleCache.set(from, entry);
  return entry;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, {
      get: all[name],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name] = () => newValue
    });
};

// packages/bunup/test/.project/src/cjs-file.ts
var exports_cjs_file = {};
__export(exports_cjs_file, {
  getMetaUrl: () => getMetaUrl
});
module.exports = __toCommonJS(exports_cjs_file);
var import_url = require("url");
var __filename = "/Users/admin/Desktop/Bunup/bunup/packages/bunup/test/.project/src/cjs-file.ts";
var importMetaUrl2 = import_url.pathToFileURL(__filename).href;
console.log("import.meta.url:", importMetaUrl2);
function getMetaUrl() {
  return importMetaUrl2;
}
"
`;

exports[`shims plugin should properly handle both types of shims in the same file 1`] = `
"// packages/bunup/test/.project/src/index.ts
import { fileURLToPath } from "url";
import { dirname } from "path";
var __filename2 = fileURLToPath(import.meta.url);
var __dirname2 = dirname(__filename2);
console.log("dirname:", __dirname2);
console.log("import.meta.url:", import.meta.url);
function getPaths() {
  return {
    dir: __dirname2,
    metaUrl: import.meta.url
  };
}
export {
  getPaths
};
"
`;

exports[`shims plugin should properly handle both types of shims in the same file 2`] = `
"var import_node_module = require("node:module");
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __moduleCache = /* @__PURE__ */ new WeakMap;
var __toCommonJS = (from) => {
  var entry = __moduleCache.get(from), desc;
  if (entry)
    return entry;
  entry = __defProp({}, "__esModule", { value: true });
  if (from && typeof from === "object" || typeof from === "function")
    __getOwnPropNames(from).map((key) => !__hasOwnProp.call(entry, key) && __defProp(entry, key, {
      get: () => from[key],
      enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
    }));
  __moduleCache.set(from, entry);
  return entry;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, {
      get: all[name],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name] = () => newValue
    });
};

// packages/bunup/test/.project/src/index.ts
var exports_src = {};
__export(exports_src, {
  getPaths: () => getPaths
});
module.exports = __toCommonJS(exports_src);
var import_url = require("url");
var __dirname = "/Users/admin/Desktop/Bunup/bunup/packages/bunup/test/.project/src", __filename = "/Users/admin/Desktop/Bunup/bunup/packages/bunup/test/.project/src/index.ts";
var importMetaUrl2 = import_url.pathToFileURL(__filename).href;
console.log("dirname:", __dirname);
console.log("import.meta.url:", importMetaUrl2);
function getPaths() {
  return {
    dir: __dirname,
    metaUrl: importMetaUrl2
  };
}
"
`;
